view-icon-controller: Stop setting column/row spacing
There is no GtkGridView equivalent for this GtkFlowBox API.

Use child widget margins instead.

--- a/src/resources/css/Adwaita.css
+++ b/src/resources/css/Adwaita.css
@@ -152,7 +152,7 @@
 
 /* Grid view */
 .nautilus-grid-view flowbox {
-  padding: 18px;
+  padding: 15px;
 }
 
 .nautilus-grid-view flowboxchild {
